# wutils

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
.zed/: settings.json
src/: cli.rs  main.rs  utils.rs
src/cli/: salary.rs  time.rs
